# stackcore

./: .gitignore  README.md  build.sh  conda_env.yml  example.py  pyproject.toml  requirements.txt
numba/: e.py  ext.py  m.py  pm.py  s.py
src/: matrix.py  point_manipulation.py  visualization.py
src/stackcore/: matrix.py  numba_modules.py  point_manipulation.py  stack.py  test_2comp.json  visualization.py
tests/: test_modules.py  test_stack.py  test_visualization.py
